--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "devDependencies": {
     "coveralls": "~2.13.0",
     "del": "^3.0.0",
-    "eslint": "~2.2.0",
+    "eslint": "^2.2.0",
     "eslint-config-airbnb": "~6.0.2",
     "gulp": "~3.9.1",
     "gulp-angular-templatecache": "~2.0.0",
