--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "acl": "~0.4.10",
+    "angular-material": "^1.1.4",
+    "angular-ui-grid": "^4.0.6",
     "async": "~2.3.0",
     "body-parser": "~1.17.1",
     "bower": "~1.8.0",
@@ -79,7 +81,7 @@
     "del": "^3.0.0",
     "eslint": "^2.2.0",
     "eslint-config-airbnb": "~6.0.2",
-    "gulp": "~3.9.1",
+    "gulp": "^3.9.1",
     "gulp-angular-templatecache": "~2.0.0",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-concat": "~2.6.0",
@@ -92,6 +94,7 @@
     "gulp-load-plugins": "~1.5.0",
     "gulp-mocha": "~3.0.1",
     "gulp-ng-annotate": "~2.0.0",
+    "gulp-node-inspector": "^0.2.0",
     "gulp-nodemon": "~2.2.1",
     "gulp-protractor": "^4.0.0",
     "gulp-refresh": "~1.1.0",
