--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "socket.io": "^2.0.2",
     "validator": "~8.0.0",
     "winston": "^2.3.1",
-    "wiredep": "~4.0.0"
+    "wiredep": "~4.0.0",
+    "xlsx": "^0.12.3"
   },
   "devDependencies": {
     "coveralls": "~2.13.0",
