--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "meanjs",
+  "name": "fitdrinks",
   "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
   "version": "0.5.0",
   "meanjs-version": "0.5.0",
   "private": false,
-  "author": "https://github.com/meanjs/mean/graphs/contributors",
+  "author": "https://github.com/sabousha",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/meanjs/mean.git"
+    "url": "https://github.com/sabousha/myMeanApp.git"
   },
   "engines": {
     "node": ">=6.10.0",
