--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "karma-mocha-reporter": "~2.2.3",
     "karma-ng-html2js-preprocessor": "~1.0.0",
     "lcov-result-merger": "~1.2.0",
+    "prettier": "1.11.1",
     "run-sequence": "~2.0.0",
     "semver": "~5.3.0",
     "should": "~11.2.1",
