--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "test:e2e": "gulp test:e2e",
     "test:coverage": "gulp test:coverage",
     "postinstall": "npm run bower",
-    "generate-ssl-certs": "scripts/generate-ssl-certs.sh"
+    "generate-ssl-certs": "scripts/generate-ssl-certs.sh",
+    "precommit": "precise-commits"
   },
   "dependencies": {
     "acl": "~0.4.10",
@@ -103,6 +104,7 @@
     "gulp-sass": "~3.1.0",
     "gulp-uglify": "~2.1.2",
     "gulp-util": "~3.0.7",
+    "husky": "^0.14.3",
     "imagemin-pngquant": "~5.0.0",
     "istanbul": "~0.4.2",
     "karma": "~1.6.0",
@@ -112,6 +114,7 @@
     "karma-mocha-reporter": "~2.2.3",
     "karma-ng-html2js-preprocessor": "~1.0.0",
     "lcov-result-merger": "~1.2.0",
+    "precise-commits": "^1.0.2",
     "prettier": "1.11.1",
     "run-sequence": "~2.0.0",
     "semver": "~5.3.0",
