make default port the HTTP port

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -9,6 +9,7 @@ services:
     ports:
      - "8443:8443"
     environment:
+     - PORT=80
      - NODE_ENV=production
      - DB_1_PORT_27017_TCP_ADDR=db
     depends_on:
