--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "test:e2e": "gulp test:e2e",
     "test:coverage": "gulp test:coverage",
     "postinstall": "npm run bower",
-    "generate-ssl-certs": "scripts/generate-ssl-certs.sh",
-    "precommit": "precise-commits"
+    "generate-ssl-certs": "scripts/generate-ssl-certs.sh"
   },
   "dependencies": {
     "acl": "~0.4.10",
