--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "gulp-refresh": "~1.1.0",
     "gulp-rename": "~1.2.2",
     "gulp-rev": "^7.1.2",
-    "gulp-sass": "~3.1.0",
+    "gulp-sass": "^4.0.1",
     "gulp-uglify": "~2.1.2",
     "gulp-util": "~3.0.7",
     "husky": "^0.14.3",
