--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start:prod": "gulp prod",
     "start:debug": "node-debug --web-host 0.0.0.0 server.js & gulp debug",
     "gulp": "gulp",
-    "bower": "bower install --allow-root && bower prune --allow-root",
+    "bower": "bower install",
     "lint": "gulp lint",
     "test": "gulp test",
     "test:server": "gulp test:server",
