new ubuntu broke my shit

--- a/Dockerfile-production
+++ b/Dockerfile-production
@@ -7,7 +7,7 @@
 # Compose:
 # docker-compose -f docker-compose-production.yml up -d
 
-FROM ubuntu:latest
+FROM ubuntu:16.04
 MAINTAINER MEAN.JS
 
 # 80 = HTTP, 443 = HTTPS, 3000 = MEAN.JS server, 35729 = livereload
