--- a/Dockerfile-production
+++ b/Dockerfile-production
@@ -46,12 +46,13 @@ WORKDIR /opt/mean.js
 # when the local package.json file changes.
 # Install npm packages
 COPY package.json /opt/mean.js/package.json
-# RUN NODE_ENV=development npm install ---verbose && npm cache clean
+RUN npm install 
+RUN npm cache clean
 
 # Install bower packages
 COPY bower.json /opt/mean.js/bower.json
 COPY .bowerrc /opt/mean.js/.bowerrc
-# RUN bower install --quiet --allow-root --config.interactive=false
+RUN bower install --allow-root 
 
 # Set development environment as default
 ENV NODE_ENV production
@@ -59,4 +60,4 @@ ENV NODE_ENV production
 COPY . /opt/mean.js
 
 # Run MEAN.JS server
-# CMD ["npm","run-script","start:prod"]
+CMD ["npm","run-script","start:prod"]
