--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "bootstrap": "~3.3.6",
     "ng-file-upload": "~12.1.0",
     "owasp-password-strength-test": "~1.3.0",
-    "angular-ui-grid": "^4.2.4"
+    "angular-ui-grid": "^4.2.4",
+    "simple-line-icons": "^2.4.1",
+    "components-font-awesome": "^5.0.6"
   },
   "overrides": {
     "bootstrap": {
@@ -30,6 +32,6 @@
     }
   },
   "resolutions": {
-      "angular": "1.7.2"
+    "angular": "1.7.2"
   }
 }
