--- a/Dockerfile-production
+++ b/Dockerfile-production
@@ -63,7 +63,8 @@ COPY . /opt/mean.js
 COPY gulpfile.js /opt/mean.js/gulpfile.js
 
 # need to have the 2 minified files precompiled and in same path as dockerfile before build image
-COPY application-89eb72e851.min.js /opt/mean.js/public/dist
+RUN mkdir -p /opt/mean.js/public/dist
+COPY application-8caac940e7.min.js /opt/mean.js/public/dist
 COPY application-a5d846df2c.min.css /opt/mean.js/public/dist
 
 # Run MEAN.JS server
