--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ services:
   web:
     restart: always
     build: .
-    container_name: meanjs
+    container_name: fitdrinks
+    image: sedkis/fitdrinks
     ports:
-     - "3000:3000"
+     - "3000:8443"
      - "5858:5858"
      - "8080:8080"
      - "35729:35729"
@@ -18,6 +19,7 @@ services:
      - web-data
   web-data:
     build: .
+    image: sedkis/fitdrinks
     entrypoint: /bin/true
     volumes:
      - ./:/opt/mean.js
