--- a/Dockerfile-production
+++ b/Dockerfile-production
@@ -7,35 +7,13 @@
 # Compose:
 # docker-compose -f docker-compose-production.yml up -d
 
-FROM ubuntu:16.04
-MAINTAINER MEAN.JS
+FROM node:9
 
 # 80 = HTTP, 443 = HTTPS, 3000 = MEAN.JS server, 35729 = livereload
 EXPOSE 80 443 3000 35729
 
-# Install Utilities
-RUN apt-get update -q  \
- && apt-get install -yqq \
- curl \
- git \
- ssh \
- gcc \
- make \
- build-essential \
- libkrb5-dev \
- sudo \
- apt-utils \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-# Install nodejs
-RUN curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-RUN sudo apt-get install -yq nodejs \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
 # Install MEAN.JS Prerequisites
-RUN npm install -g gulp bower && npm cache clean
+RUN npm install --quiet -g gulp bower yo mocha karma-cli pm2 && npm cache verify
 
 RUN mkdir -p /opt/mean.js/public/lib
 WORKDIR /opt/mean.js
@@ -46,26 +24,15 @@ WORKDIR /opt/mean.js
 # when the local package.json file changes.
 # Install npm packages
 COPY package.json /opt/mean.js/package.json
-RUN npm install 
-RUN npm cache clean
+RUN npm install --quiet
+RUN npm cache verify
 
 # Install bower packages
 COPY bower.json /opt/mean.js/bower.json
 COPY .bowerrc /opt/mean.js/.bowerrc
-#RUN bower install angular@1.7.2 --allow-root
-RUN bower install --allow-root 
-
-# Set development environment as default
-ENV NODE_ENV production
+RUN bower install --quiet --allow-root --config.interactive=false
 
 COPY . /opt/mean.js
 
-COPY gulpfile.js /opt/mean.js/gulpfile.js
-
-# need to have the 2 minified files precompiled and in same path as dockerfile before build image
-RUN mkdir -p /opt/mean.js/public/dist
-COPY application-8caac940e7.min.js /opt/mean.js/public/dist
-COPY application-a5d846df2c.min.css /opt/mean.js/public/dist
-
 # Run MEAN.JS server
-CMD ["npm","run-script","start:prod:nobuild"]
+CMD ["npm","run-script","start:prod"]
