--- a/docker-compose-production-dev.yml
+++ b/docker-compose-production-dev.yml
@@ -8,12 +8,14 @@ services:
     image: sedkis/fitdrinks
     container_name: meanjs
     ports:
-     - "80:8443"
+     - "3000:8443"
     environment:
      - DB_1_PORT_27017_TCP_ADDR=db
     depends_on:
      - db
-    # volumes:
+    volumes:
+      - ./config:/opt/mean.js/config
+      - ./gulpfile.js:/opt/mean.js/gulpfile.js
     # volumes_from:
     #  - web-data
   web-data:
