--- a/Dockerfile-production
+++ b/Dockerfile-production
@@ -21,7 +21,7 @@ WORKDIR /opt/mean.js
 # Copies the local package.json file to the container
 # and utilities docker container cache to not needing to rebuild
 # and install node_modules/ everytime we build the docker, but only
-# when the local package.json file changes.
+# when the local package.json file changes
 # Install npm packages
 COPY package.json /opt/mean.js/package.json
 RUN npm install --quiet
